Revisit configuration pages

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -3,8 +3,8 @@
 * *Getting started*
 * xref:whats-new.adoc[What's new]
 * xref::installation.adoc[Installation]
-* xref::quickstart.adoc[Local quickstart]
-* xref::confluent-cloud.adoc[Confluent Cloud quickstart]
+* xref::quickstart.adoc[Quickstart with Docker Compose]
+* xref::confluent-cloud.adoc[Quickstart with Confluent Cloud]
 // * xref::amazon-msk.adoc[Amazon MSK quickstart]
 
 * *Source connector*
