--- a/modules/ROOT/pages/sink/configuration.adoc
+++ b/modules/ROOT/pages/sink/configuration.adoc
@@ -1,17 +1,24 @@
-= Configuration Summary
+= Sink Configuration Settings
+:type: sink
 
 [#connector-sink-common-configuration]
 include::partial$connector-common-configuration.adoc[]
 
 == Common Sink Settings
 
-[%autowidth,cols="m,a",opts=header]
+[%width="100%",cols="m,a",opts=header]
 |===
 
-| Name | Description
-| `neo4j.batch-parallelize | One of `true`, `false`
-| `neo4j.batch-size | Default: `1000`
-| `neo4j.batch-timeout | Batch transaction timeout duration in seconds, minutes, hours or days. Examples: `1d`, `2h`, `3m`, `4s`, `5ms`
+| Name
+| Description
+
+| `neo4j.batch-size`
+| Maximum number of messages processed per transaction per topic.
+
+Default: `1000`
+
+| `neo4j.batch-timeout`
+| Maximum amount of time a batch is allowed to be processed (valid units are: `ms`, `s`, `m`, `h` and `d`; default unit is `s`).
 
 Default: `0s`
 
@@ -20,38 +27,136 @@ Default: `0s`
 [[cypher_strategy_settings]]
 == Cypher Strategy Settings
 
-[%autowidth,cols="m,a",opts=header]
+[%width="100%",cols="m,a",opts=header]
 |===
 
-| Name | Description
-| neo4j.cypher.topic.\{NAME} | Cypher statement to run for the specified topic.
+| Name
+| Description
+
+| neo4j.cypher.topic.\{NAME}
+| Cypher statement to run for the specified topic.
 Example: `"neo4j.cypher.topic.my-topic": "MERGE (n:Person {name: __value.name})"`
-| neo4j.cypher.bind-header-as | Name of the variable to bind the message headers as.
+
+| neo4j.cypher.bind-timestamp-as
+| Under what name message timestamp will be bound in user provided Cypher statements.
+Set to empty string to disable binding of message timestamp.
+
+Default: `__timestamp`
+
+| neo4j.cypher.bind-header-as
+| Under what name message header will be bound in user provided Cypher statements.
 Message headers will be bound as a map of header names to corresponding values.
 Set to empty string to disable binding of message headers.
+
 Default: `__header`
-| neo4j.cypher.bind-key-as | Name of the variable to bind the message key as.
+
+| neo4j.cypher.bind-key-as
+| Under what name message key will be bound in user provided Cypher statements.
 Set to empty string to disable binding of message key.
+
 Default: `__key`
-| neo4j.cypher.bind-value-as | Name of the variable to bind the message value as.
+
+| neo4j.cypher.bind-value-as
+| Under what name message value will be bound in user provided Cypher statements.
 Set to empty string to disable binding of message value.
+
 Default: `__value`
-| neo4j.cypher.bind-value-as-event | Whether to also bind the message value as `event` for backward compatibility purposes. Default: `true`
+
+| neo4j.cypher.bind-value-as-event
+| Whether message value will be bound as 'event' in user provided Cypher statements for backward compatibility.
+
+Default: `true`
+
 |===
 
 == Pattern Strategy Settings
 
-[%autowidth,cols="m,a",opts=header]
+[%width="100%",cols="m,a",opts=header]
 |===
 
-| Name | Description
-| neo4j.pattern.node.topic.\{NAME} | Node pattern to apply on the messages received from the specified topic.
+| Name
+| Description
+
+| neo4j.pattern.node.topic.\{NAME}
+| Node pattern to apply on the messages received from the specified topic.
 Example: `"neo4j.pattern.node.topic.user": "(:User\{!userId})"`
-| neo4j.pattern.relationship.topic.\{NAME} | Relationship pattern to apply on the messages received from the specified topic.
+
+| neo4j.pattern.relationship.topic.\{NAME}
+| Relationship pattern to apply on the messages received from the specified topic.
 Example: `"neo4j.pattern.relationship.topic.user": "(:User\{!userId})-[:KNOWS]->(:User\{!otherUserId})"`
-| neo4j.pattern.node.merge-properties | Whether to merge node properties with the incoming node properties, applies to both node and relationship pattern strategies.
+
+| neo4j.pattern.node.merge-properties
+| Whether to merge incoming properties with existing properties of nodes (when using `Node Pattern` strategy) or relationship start and end nodes (when using `Relationship Pattern` strategy).
+
 Default: `false`
-| neo4j.pattern.relationship.merge-properties | Whether to merge relationship properties with the incoming relationship properties.
+
+| neo4j.pattern.relationship.merge-properties
+| Whether to merge incoming properties with existing properties of relationships (when using `Relationship Pattern` strategy).
+
 Default: `false`
+
+| neo4j.pattern.bind-timestamp-as
+| Under what name message timestamp will be bound in patterns.
+Set to empty string to disable binding of message timestamp.
+
+Default: `__timestamp`
+
+| neo4j.pattern.bind-header-as
+| Under what name message header will be bound in patterns.
+Message headers will be bound as a map of header names to corresponding values.
+Set to empty string to disable binding of message headers.
+
+Default: `__header`
+
+| neo4j.pattern.bind-key-as
+| Under what name message key will be bound in patterns.
+Set to empty string to disable binding of message key.
+
+Default: `__key`
+
+| neo4j.pattern.bind-value-as
+| Under what name message value will be bound in patterns.
+Set to empty string to disable binding of message value.
+
+Default: `__value`
+
+|===
+
+== CDC Strategy Settings
+
+[%width="100%",cols="m,a",opts=header]
+|===
+
+| Name
+| Description
+
+| `neo4j.cdc.schema.topics`
+| The topic(s) that contain CDC events generated by a Source instance of this connector using `CDC` source strategy.
+
+| `neo4j.cdc.source-id.topics`
+| The topic(s) that contain CDC events generated by a Source instance of this connector using `CDC` source strategy.
+
+| `neo4j.cdc.source-id.label-name`
+| The label name attached to the nodes managed by the `CDC Source Id` strategy.
+
+Default: `SourceEvent`
+
+| `neo4j.cdc.source-id.property-name`
+| The id property name attached to the nodes managed by the `CDC Source Id` strategy.
+
+Default: `sourceId`
+
+|===
+
+== CUD  Strategy Settings
+
+[%width="100%",cols="m,a",opts=header]
+|===
+
+| Name
+| Description
+
+| `neo4j.cud.topics`
+| The topic(s) that contain CUD events.
 
 |===
