--- a/modules/ROOT/pages/source/configuration.adoc
+++ b/modules/ROOT/pages/source/configuration.adoc
@@ -1,4 +1,5 @@
 = Source Configuration Settings
+:type: source
 
 [#connector-source-common-configuration]
 include::partial$connector-common-configuration.adoc[]
@@ -36,7 +37,7 @@ Default: `1000`
 
 |===
 
-== `CDC` Strategy Settings
+== CDC Strategy Settings
 
 [%width="100%",cols="m,a",opts=header]
 |===
