--- a/modules/ROOT/pages/sink/pattern.adoc
+++ b/modules/ROOT/pages/sink/pattern.adoc
@@ -26,7 +26,7 @@ You cannot mix inclusion and exclusion inside patterns, i.e. your pattern must c
 
 === Examples
 
-* `MERGE` operation on `User` label with `userId` treated as a key and assigning all properties from incoming message to the node
+* `MERGE` operation on `User` label with `userId` treated as a key and assigning all properties from incoming message value to the node
 +
 [source]
 ----
@@ -61,18 +61,18 @@ or
 (:User{!userId, -address})
 ----
 
-* `MERGE` operation on `User` label with `userId` treated as key which will be taken from the key part of the message and assigning *only* `surname` property from the value part of incoming message to the node
+* `MERGE` operation on `User` label with `userId` treated as key which will be taken from the key part of the message and assigning *only* `name` and `surname` properties from the value part of incoming message to the node
 +
 [source]
 ----
-(:User{!userId: __key.id, surname: __value.surname})
+(:User{!userId: __key.id, name: __value.firstName, surname: __value.lastName})
 ----
 
-* `MERGE` operation on `User` label with `userId` treated as key which will be taken from the header of incoming message and assigning *only* `createdAt` property as current timestamp to the node
+* `MERGE` operation on `User` label with `userId` treated as key which will be taken from the key part of incoming message and assigning *only* `name`, `surname` properties from the value part, `createdBy` from the header and `createdAt` property as current timestamp to the node
 +
 [source]
 ----
-(:User{!userId: __header.id, createdAt: __timestamp})
+(:User{!userId: __key.id, name: __value.firstName, surname: __value.lastName, createdBy: __header.username, createdAt: __timestamp})
 ----
 
 === Configuration
@@ -102,7 +102,7 @@ You can transform it into a node by providing the following configuration:
 
 Relationship patterns are defined similar to Cypher relationship patterns.
 
-. node pattern for start node (it should contain only one key property)
+. node pattern for start node
 . `-[`
 . define relationship type, prepended by `:`, such as `:BOUGHT` or `:KNOWS`
 . open property section with `{`
@@ -117,7 +117,7 @@ By default, messages fields can be referenced as `__timestamp`, `\__headers`, `_
 .. list of property names _not_ to be assigned to the relationship, each prepended with `-`, all other properties from message will be assigned to the relationship
 . close property section with `}`
 . `]\->`
-. node pattern for end node (it should contain only one key property)
+. node pattern for end node
 
 [NOTE]
 You cannot mix inclusion and exclusion inside patterns, i.e. your pattern must contains all exclusion or inclusion properties.
@@ -131,25 +131,32 @@ You cannot mix inclusion and exclusion inside patterns, i.e. your pattern must c
 (:User{!userId})-[:BOUGHT]->(:Product{!productId})
 ----
 
-. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `price` and `currency` properties from JSON object to the relationship
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `price` and `currency` properties from incoming message to the relationship
 +
 [source]
 ----
 (:User{!userId})-[:BOUGHT{price,currency}]->(:Product{!productId})
 ----
 
-. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `price`,  `currency` and `shippingAddress.city` properties from JSON object to the relationship
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `price`,  `currency` and `shippingAddress.city` properties from incoming message to the relationship
 +
 [source]
 ----
 (:User{!userId})-[:BOUGHT{price,currency,shippingAddress.city}]->(:Product{!productId})
 ----
 
-. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning all properties *excluding* `shippingAddress` from JSON object to the relationship
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning all properties *excluding* `shippingAddress` from incoming message to the relationship
 +
 [source]
 ----
 (:User{!userId})-[:BOUGHT{-shippingAddress}]->(:Product{!productId})
+----
+
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively, assign `userFirstName` and `userLastName` properties from the message to the `User` node and `MERGE` a `BOUGHT` relationship between them assigning *only* `price` and `currency` properties from the message to the relationship
++
+[source]
+----
+(:User{!userId, userFirstName, userLastName})-[:BOUGHT{price, currency}]->(:Product{!productId})
 ----
 
 . `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `transactionId` property as a key property from key part of the message and `date` from value part of the message to the relationship
@@ -181,6 +188,9 @@ You can transform it into a path, like `(n)-[r]->(m)`, by providing the followin
 ----
 "neo4j.pattern.relationship.topic.user": "(:User{!userId})-[:BOUGHT{price, currency}]->(:Product{!productId})"
 ----
+
+[NOTE]
+Relationship key properties can only be used with Neo4j Enterprise Edition and AuraDB.
 
 == Tombstone Records
 
